<resources>
    <string name="app_name">PlantMonitoring</string>

    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm">Confirm</string>
    <string name="don_t_have_an_account">Don\'t have an account?\ </string>
    <string name="register_now">Register now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?\ </string>
    <string name="password_must_have_at_least_6_characters_and_contain_a_lowercase_an_uppercase_and_a_number">Password must have at least 6 characters and contain a lowercase, an uppercase and a number</string>
    <string name="email_req">Email\ <font color='#FF0000'>*</font></string>
    <string name="password_req">Password\ <font color='#FF0000'>*</font></string>
    <string name="confirm_password_req">Confirm Password\ <font color='#FF0000'>*</font></string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="device_id">Device Id\ <font color='#FF0000'>*</font></string>
    <string name="add">Add</string>
    <string name="click_image_to_upload_photo">Click image to upload photo</string>
    <string name="offline">Offline</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="plants">Plants</string>
    <string name="devices">Devices</string>
</resources>